src/styles/_banner.scss
.banner {
    margin: 0 0 1rem 0;
    .image-container {
        height: 7rem;
        width: 100%;
        position: relative;
        @media (min-width: 1440px) {
            height: 13rem;
            
        }

        img {
            height: 100%;
            width: 100%;
            border-radius: 0.625rem;
            object-fit: cover;
        }
        p{
            position: absolute;
            top: 30%;
            left: 5%;
            color: white;
            font-weight: 500;
            font-size: 1.5rem;
            z-index: 2;
            margin: 0;
            @media (min-width: 1440px){
                font-size: 3rem;
                font-weight: 400;
                top: 40%;
                left: 24%;
            }
        }
    }

    .image-container::before {
        content: '';
        position: absolute;
        top: 0;
        left: 0;
        width: 100%;
        height: 100%;
        background-color: rgba(0, 0, 0, 0.3); /* Noir avec 50% d'opacité */
        z-index: 1;
        border-radius: 0.625rem;
    }
}

